<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>mx.randalf.configuration</groupId>
	<artifactId>RandalfConfiguration</artifactId>
	<version>3.0.1</version>
	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<maven.compiler.source>1.9</maven.compiler.source>
		<maven.compiler.target>1.9</maven.compiler.target>
	</properties>
	<dependencies>
		<dependency>
			<groupId>xml-apis</groupId>
			<artifactId>xml-apis</artifactId>
			<version>1.4.01</version>
		</dependency>
		<dependency>
			<groupId>log4j</groupId>
			<artifactId>log4j</artifactId>
			<version>1.2.17</version>
		</dependency>
	</dependencies>
	<description>Progetto utilizzato per la gestione dei files di configurazione</description>
<!--
	<distributionManagement>
		<repository>
			<uniqueVersion>false</uniqueVersion>
			<id>sftp-repository-stable</id>
			<url>scpexe://maven.bncf.lan/var/www/maven.bncf.lan/repository/release</url>
			<layout>default</layout>
		</repository>
	</distributionManagement>
	<repositories>
		<repository>
			<snapshots>
				<enabled>false</enabled>
			</snapshots>
			<id>randalf.mx-release</id>
			<url>http://maven.bncf.lan/repository/release</url>
		</repository>
	</repositories>
	<build>
		<extensions>
			<extension>
				<groupId>org.apache.maven.wagon</groupId>
				<artifactId>wagon-ssh-external</artifactId>
				<version>1.0-beta-6</version>
			</extension>
		</extensions>
	</build>
-->
  <distributionManagement>
    <repository>
        <id>mvn-bncf</id>
        <name>Maven BNCF-releases</name>
        <url>http://maven.bncf.firenze.sbn.it/artifactory/libs-release-local</url>
    </repository>
</distributionManagement>
</project>
